--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h2 {
 	border: 5px solid var(--ec);
 	border-radius: 10px;
 	padding: 10px;
+	margin-top: 10px;
 	width: 270px;
 	overflow-x: scroll;
 	margin: 0;
