--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ button {
 }
 
 button:hover {
-	transition: 0.15s;
-	font-size: calc(var(--fs)*1.25);
+	transition: 0.3s;
+	background: var(--ec);
 }
 
 div {
@@ -118,5 +118,32 @@ div {
 
 ::-webkit-scrollbar-thumb:hover {
 	background: var(--ec);
+}
+
+#home--tip {
+	position: fixed;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 2%;
+	font-size: 14px;
+	background: var(--ec);
+	padding: 3px;
+	border-radius: 5px;
+}
+
+#home--tip button {
+	font-size: 12px;
+	margin: 0;
+	padding: 4px;
+	border-radius: 5px;
+}
+
+#home--tip button:hover {
+	font-size: 14px;
+	background: var(--dc);
+}
+
+#home--button {
+	font-size: 16px;
 }
 
